[package]
name = "credlock"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0" }
clap_derive = { version = "4.0.0-rc.1" }
serde = "=1.0.219"
serde_json = { version = "1.0" }
mongodb = "=3.2.4"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
actix-web = "4.11.0"
uuid = { version = "1.18.1", features = ["v4"] }
actix-web-httpauth = "0.8.2"
